added expander in history  list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="home">Home</string>
     <string name="chat">Chat</string>
     <string name="call_histroy">Call History</string>
+    <string name="call_1">Call 1</string>
+    <string name="call_2">Call 2</string>
 </resources>
