--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="call_histroy">Call History</string>
     <string name="call_1">Call 1</string>
     <string name="call_2">Call 2</string>
+    <string name="go_to">Go To</string>
 </resources>
