--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="call_1">Call 1</string>
     <string name="call_2">Call 2</string>
     <string name="go_to">Go To</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="be_a_part_of_the_largest_indian_traval_community">Be a part of the largest Indian Traval Community</string>
+    <string name="email">Email</string>
+    <string name="login">Login</string>
+    <string name="by_continuing_i_agree_to_cartravals_com_t_amp_c"><![CDATA[By Continuing,I agree to cartravals.com T & C]]></string>
+    <string name="personal">Personal</string>
+    <string name="bussiness">Bussiness</string>
 </resources>
