--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -13,4 +13,5 @@
     <string name="signup">Sign Up</string>
     <string name="forgot_password">Forgot Password</string>
     <string name="skip">Skip</string>
+    <string name="next">Next</string>
 </resources>
