--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="EnterEmailid">Enter Email id</string>
     <string name="EnterMobileNumber">Enter Mobile Number</string>
     <string name="CheckTermsAndConditions">Check Terms and Conditions</string>
+    <string name="next">Next</string>
 </resources>
