--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="OutgoingCall">Outgoing Call</string>
     <string name="IncomingCall">Incoming Call</string>
     <string name="MissedCall">Missed Call</string>
+    <string name="Please_install_WA_Business_App">"Please install WA Business App"</string>
 </resources>
