--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="Please_install_WA_Business_App">"Please install WA Business App"</string>
     <string name="call_history">Call History</string>
     <string name="contacts">Contacts</string>
+    <string name="favourite">Favourite</string>
 </resources>
