Userregister and user login, user exit and forgotpassword,otp verification apis completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="enter_otp">Enter OTP</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="phone_number">Phone Number</string>
 </resources>
